fix flickering of status

--- a/src/main/resources/META-INF/resources/assets/stylesheets/index.css
+++ b/src/main/resources/META-INF/resources/assets/stylesheets/index.css
@@ -29,7 +29,7 @@ body.-found {
 
 #status-element {
   flex: 7 3em;
-  font-size: 1.2em;
+  font-size: 0.9em;
   padding: 1em;
 }
 
